...
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/love"
        app:layout_constraintBottom_toTopOf="@+id/userNameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

...
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="username"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        android:theme="@style/MyEditText"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/scanButton"
        android:layout_width="0dp"
...
